[package]
name = "pdf_form"
version = "0.4.0"
authors = ["Jake <jsandler18@gmail.com>", "Malte <voos.malte@gmail.com>", "Emulator000 <emulator@hotmail.it>"]
readme = "README.md"
keywords = ["pdf", "form"]
description = "A library for programatically filling out pdf forms"
license = "MIT"
edition = "2018"

[dependencies]
bitflags = "2.4.1"
lopdf = "0.31.0"
thiserror = "1.0.50"
